docs-archive/apache-airflow-providers-amazon/9.39.0/_sources/_api/airflow/providers/amazon/aws/operators/quicksight/index.rst.txt
airflow.providers.amazon.aws.operators.quicksight
=================================================

.. py:module:: airflow.providers.amazon.aws.operators.quicksight


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.operators.quicksight.QuickSightCreateIngestionOperator


Module Contents
---------------

.. py:class:: QuickSightCreateIngestionOperator(data_set_id, ingestion_id, ingestion_type = 'FULL_REFRESH', wait_for_completion = True, waiter_delay = 30, waiter_max_attempts = 4320, check_interval = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.quicksight.QuickSightHook`\ ]


   Creates and starts a new SPICE ingestion for a dataset;  also helps to Refresh existing SPICE datasets.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:QuickSightCreateIngestionOperator`

   :param data_set_id:  ID of the dataset used in the ingestion.
   :param ingestion_id: ID for the ingestion.
   :param ingestion_type: Type of ingestion. Values Can be  INCREMENTAL_REFRESH or FULL_REFRESH.
       Default FULL_REFRESH.
   :param wait_for_completion: If True, wait for the ingestion to reach a terminal state. (default: True)
   :param waiter_delay: Time in seconds to wait between status checks. (default: 30)
   :param waiter_max_attempts: Maximum number of attempts to check for completion. (default: 4320)
   :param check_interval: Deprecated, use ``waiter_delay`` instead.
   :param deferrable: If True, the operator will wait asynchronously for the ingestion to complete.
       This implies waiting for completion. This mode requires aiobotocore module to be installed.
       (default: False, but can be overridden in config file by setting default_deferrable to True)
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: ui_color
      :value: '#ffd700'



   .. py:attribute:: data_set_id


   .. py:attribute:: ingestion_id


   .. py:attribute:: ingestion_type
      :value: 'FULL_REFRESH'



   .. py:attribute:: wait_for_completion
      :value: True



   .. py:attribute:: waiter_delay
      :value: 30



   .. py:attribute:: waiter_max_attempts
      :value: 4320



   .. py:attribute:: check_interval
      :value: None



   .. py:attribute:: deferrable


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event = None, ingestion = None)


